# VB2_sdk

./: README.md
C++/control/arm/: ReadMe.md
C++/control/arm/taihu_arm/ti5_arm_control/: CMakeLists.txt  start.txt
C++/control/arm/taihu_arm/ti5_arm_control/HumanoidDualArmSolver_2025-6-4-全双编/include/: Ti5BASIC.h  Ti5CAN_Driver.h  mathfunc.h
C++/control/arm/taihu_arm/ti5_arm_control/include/: Ti5LOGIC.h  Ti5MOVE.h  tool.h
C++/control/arm/taihu_arm/ti5_arm_control/src/: arm_control.cpp  arm_control.hpp  main_speed_control.cpp
C++/control/hand/brainco_hand/: README.md
C++/control/others/waist_rotate/: README.md
C++/control/others/waitst_liftup/: README.md
ros2_humble_ws/: README.md
ros2_humble_ws/vmr_vb2_jaka_k1/src/: README.md
ros2_humble_ws/vmr_vb2_jaka_k1/src/control/brainco_control/: CMakeLists.txt  brainco_hardware.xml  package.xml
ros2_humble_ws/vmr_vb2_jaka_k1/src/control/jaka_k1_dual_control/: CMakeLists.txt  jaka_k1_dual_hardware.xml  package.xml
ros2_humble_ws/vmr_vb2_jaka_k1/src/control/lx_motor_interfaces/: CMakeLists.txt
ros2_humble_ws/vmr_vb2_jaka_k1/src/control/wasit_control/: package.xml
ros2_humble_ws/vmr_vb2_jaka_k1/src/py/: colcon_build.sh  run_arm_move.sh
ros2_humble_ws/vmr_vb2_jaka_k1/src/service_srv/: CMakeLists.txt
ros2_humble_ws/vmr_vb2_jaka_k1/src/service_srv/srv/: ArmCommandService.srv
ros2_humble_ws/vmr_vb2_jaka_k1/src/vb2_robot_config/: .setup_assistant  CMakeLists.txt  package.xml
ros2_humble_ws/vmr_vb2_jaka_k1/src/vb2_robot_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  vb2_robot.rviz  vb2_robot_description.ros2_control.xacro  vb2_robot_description.srdf  vb2_robot_description.urdf.xacro
ros2_humble_ws/vmr_vb2_jaka_k1/src/vb2_robot_config/launch/: demo.launch.py  demo_test.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  rviz_display.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  vb2_custom.launch.py  vb2_robot_controllers.launch.py  vb2_robot_rviz.launch.py  warehouse_db.launch.py
ros2_humble_ws/vmr_vb2_jaka_k1/src/vb2_robot_description/: CMakeLists.txt  package.xml
ros2_humble_ws/vmr_vb2_jaka_k1/src/vb2_robot_description/urdf/: vb2_arm_waist.urdf  vb2_robot_urdf.urdf
ros2_humble_ws/vmr_vb2_taihu/src/: README.md
ros2_humble_ws/vmr_vb2_taihu/src/control/brainco_control/: CMakeLists.txt
ros2_humble_ws/vmr_vb2_taihu/src/control/brainco_control/include/brainco_control/: brainco_system.hpp  visibility_control.h
ros2_humble_ws/vmr_vb2_taihu/src/control/brainco_control/src/: brainco_system.cpp
ros2_humble_ws/vmr_vb2_taihu/src/control/head_control/: CMakeLists.txt  head_control.xml  package.xml
ros2_humble_ws/vmr_vb2_taihu/src/control/lx_motor_interfaces/: package.xml
ros2_humble_ws/vmr_vb2_taihu/src/control/taihu_dual_arm_hardware/: CMakeLists.txt  package.xml  taihu_dual_arm_hardware.xml
ros2_humble_ws/vmr_vb2_taihu/src/control/taihu_dual_arm_hardware/include/taihu_dual_arm_hardware/: taihu_dual_arm_hardware_interface.hpp  visibility_control.h
ros2_humble_ws/vmr_vb2_taihu/src/control/taihu_dual_arm_hardware/src/: taihu_dual_arm_hardware_interface.cpp  taihu_motor_disable.cpp
ros2_humble_ws/vmr_vb2_taihu/src/control/wasit_control/: CMakeLists.txt  waist_control.xml
ros2_humble_ws/vmr_vb2_taihu/src/inspire_gripper/service_interfaces/: CMakeLists.txt
ros2_humble_ws/vmr_vb2_taihu/src/py/: analyze_rosbag_joint_states_position.py  colcon_build.sh  compute_tf.py  rpy.py  run_arm_all.sh  run_demo_launch.sh  stop_arm_all.sh  taihu_motor_zero.sh  tf.py
ros2_humble_ws/vmr_vb2_taihu/src/service_srv/: package.xml
ros2_humble_ws/vmr_vb2_taihu/src/service_srv/srv/: RunAction.srv
ros2_humble_ws/vmr_vb2_taihu/src/taihu_dual_arm_description/: CMakeLists.txt  package.xml
ros2_humble_ws/vmr_vb2_taihu/src/taihu_dual_arm_description/urdf/: taihu_revo1_description.urdf  taihu_revo2_description.urdf  vb2_taihu_inspire_gripper_description.urdf  yunxiang_taihu_revo2_description.urdf
ros2_humble_ws/vmr_vb2_taihu/src/taihu_revo1_config/: .setup_assistant  CMakeLists.txt  package.xml
ros2_humble_ws/vmr_vb2_taihu/src/taihu_revo1_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  taihu_revo1_description.ros2_control.xacro  taihu_revo1_description.srdf  taihu_revo1_description.urdf.xacro
ros2_humble_ws/vmr_vb2_taihu/src/taihu_revo1_config/launch/: demo.launch.py  demo_test.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  run_dual_arm.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ros2_humble_ws/vmr_vb2_taihu/src/taihu_revo2_config/: .setup_assistant  CMakeLists.txt  package.xml
ros2_humble_ws/vmr_vb2_taihu/src/taihu_revo2_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml  taihu_revo2_description.ros2_control.xacro  taihu_revo2_description.srdf  taihu_revo2_description.urdf.xacro
ros2_humble_ws/vmr_vb2_taihu/src/taihu_revo2_config/launch/: demo.launch.py  demo_test.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ros2_humble_ws/vmr_vb2_taihu/src/vb2_taihu_inspire_gripper_config/: .setup_assistant  CMakeLists.txt  package.xml
ros2_humble_ws/vmr_vb2_taihu/src/vb2_taihu_inspire_gripper_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  vb2_taihu_inspire_gripper_description.ros2_control.xacro  vb2_taihu_inspire_gripper_description.srdf  vb2_taihu_inspire_gripper_description.urdf.xacro
ros2_humble_ws/vmr_vb2_taihu/src/vb2_taihu_inspire_gripper_config/launch/: demo.launch.py  demo_test.launch.py  (+8 more)
ros2_humble_ws/vmr_vb2_taihu/src/yunxiang_taihu_revo2_config/: .setup_assistant  CMakeLists.txt  package.xml
(+311 files in other folders)
